Fix bug: tabs should not wrap;

--- a/client/src/styles/components/_tab.scss
+++ b/client/src/styles/components/_tab.scss
@@ -2,6 +2,7 @@
     border-bottom: 1px solid $light-gray-300;
     position: relative;
     text-align: center;
+    white-space: nowrap;
 }
 
 .tabbed-pane-nav.mod-left {
